Fix tile spacing issue between browsers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,14 +116,15 @@ input{
 
 
 /*******/
-/***  BIO TILES  ***/
+/***  BIO  ***/
 /*******/
 
 #bio{
 }
 
 #bio .project-tile.about{
-  font-size: 0.75em;
+  font-size: 0.75rem;
+  line-height: 1rem;
   width: 200px;
   height: 200px;
   outline: none;
@@ -136,7 +137,7 @@ input{
   text-align: center;
 }
 #bio .tile-content{
-  top: -48px;
+  top: -34px;
   left: -34px;
   color: #c0c0c0;
 }
@@ -169,10 +170,16 @@ input{
   background-color: #202020;
   transform: rotate(0deg);
 }
-
 #bio svg{
   display: block;
   fill: #606060;
+}
+
+#email svg{
+  position: absolute;
+  left: 40%;
+  top: 50px;
+  transition: fill 0.3s ease;
 }
 #email a{
   position: absolute;
@@ -180,22 +187,14 @@ input{
   width: 100%;
   font-size: 28px;
   font-weight: 200;
-  top: 122px;
-  left: -0.333em;
+  top: 120px;
 }
 #email span{
   position: absolute;
   display: block;
   color: #808080;
   width: 100%;
-  top: calc(50% + 1.8em);
-  left: -0.7em;
-}
-#email svg{
-  position: absolute;
-  left: calc(25% + 36px);
-  top: 23%;
-  transition: fill 0.3s ease;
+  top: 160px;
 }
 #email a:hover ~ svg{
   fill: #fff;
@@ -206,7 +205,7 @@ input{
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 48px;
+  top: 34px;
   left: 34px;
 }
 #social-array a{
